<resources>
    <!-- General use strings-->
    <string name="app_name">MadMeds</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="empty"></string>

    <!-- content_main strings -->
    <string name="view_my_info">View My Info</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>

    <!-- info_view strings -->
    <string name="new_med_button">Add</string>

    <!-- info_input strings -->
    <string name="add_new_med">Add New Medication</string>
    <string name="name">Name</string>
    <string name="hint"> </string>
    <string name="dosage">Dosage</string>
    <string name="time">Time</string>
    <string name="days">Days</string>
    <string name="recurring">Recurring</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="pick_time">Pick a Time</string>
    <string name="pick_start_day">Start Date</string>
    <string name="pick_end_day">End Date</string>
    <string name="interval">Interval</string>

    <!-- individual item -->
    <string name="delete_med">Delete Medication</string>

    <!-- settings popup strings -->
    <string name="deleteAll">Delete Everything!</string>
    <string name="delete_warning">This will delete ALL of your information. Do you wish to proceed?</string>

    <!-- super secret credits screen -->
    <string name="rtt">Run Time Terror</string>
    <string name="robert">Robert Fahey</string>
    <string name="lucas">Lucas Colegrove</string>
    <string name="sam">Sam Jones</string>
    <string name="aliza">Aliza Siddiqui</string>
    <string name="karley">Karley Waguespack</string>
    <string name="Hayley">Hayley Roberts</string>
    <string name="credits">Credits</string>

    <!-- debug strings -->
    <string-array name="debug_one">
        <item>Thing 1</item>
        <item>Thing 2</item>
        <item>Thing 3</item>
    </string-array>

</resources>